--- a/cli-releaser/buildspec.yml
+++ b/cli-releaser/buildspec.yml
@@ -18,6 +18,7 @@ phases:
     commands:
       - echo "Zipping Go Binary"
       - zip eks-cli.zip eks-a-releaser-cli
+      - chmod 644 eks-cli.zip
 artifacts:
   files:
     - eks-cli.zip
