--- a/cli-releaser/buildspec.yml
+++ b/cli-releaser/buildspec.yml
@@ -14,11 +14,6 @@ phases:
     commands:
       - echo "Go Build"
       - go build -o eks-a-releaser-cli ./eks-a-releaser/main.go
-  post_build:
-    commands:
-      - echo "Zipping Go Binary"
-      - zip eks-cli.zip eks-a-releaser-cli
-      - find $CODEBUILD_SRC_DIR -type f -name eks-cli.zip
 artifacts:
   files:
-    - cli-releaser/eks-cli.zip
+    - cli-releaser/eks-a-releaser-cli
