--- a/cli-releaser/buildspec.yml
+++ b/cli-releaser/buildspec.yml
@@ -16,4 +16,4 @@ phases:
       - go build -o eks-a-releaser-cli ./eks-a-releaser/main.go
 artifacts:
   files:
-    - cli-releaser/eks-a-releaser-cli
+    - eks-a-releaser-cli
