--- a/cli-releaser/buildspecTwo.yml
+++ b/cli-releaser/buildspecTwo.yml
@@ -16,5 +16,5 @@ phases:
   build:
     commands:
       - echo "Deploying Go CLI binary..."
-      - ./go-cli-binary create-branch
+      - ./eks-a-releaser-cli create-branch
       - # Run any additional deployment scripts or commands
