--- a/cli-releaser/buildspec-files/buildspecStageBundle.yml
+++ b/cli-releaser/buildspec-files/buildspecStageBundle.yml
@@ -6,6 +6,13 @@ phases:
       - echo "Installing dependencies..."
       - # Install any required dependencies for deployment
 
+  pre_build:
+    commands:
+      - echo "Downloading compiled binary..."
+      - aws s3 cp s3://eka-a-releaser-build-output/eks-a-releaser-build .
+      - unzip eks-a-releaser-build
+      - cd cli-releaser
+
   build:
     commands:
       - echo "Deploying Go CLI binary..."
