--- a/cli-releaser/buildspec-files/buildspecCreatebranch.yml
+++ b/cli-releaser/buildspec-files/buildspecCreatebranch.yml
@@ -17,4 +17,5 @@ phases:
     commands:
       - echo "Deploying Go CLI binary..."
       - ./eks-a-releaser-cli create-branch
+      - ./eks-a-releaser-cli update-MakeFile
       - # Run any additional deployment scripts or commands
