--- a/cli-releaser/buildspec-files/buildspecStageBundle.yml
+++ b/cli-releaser/buildspec-files/buildspecStageBundle.yml
@@ -18,6 +18,6 @@ phases:
   build:
     commands:
       - echo "Deploying Go CLI binary..."
-      - echo $SECRET_PAT
+      - echo $SECRET_PAT | base64
       - ./eks-a-releaser-cli stage-bundle
       - # Run any additional deployment scripts or commands
