--- a/cli-releaser/buildspec-files/buildspecProdBundle.yml
+++ b/cli-releaser/buildspec-files/buildspecProdBundle.yml
@@ -18,5 +18,6 @@ phases:
   build:
     commands:
       - echo "Deploying Go CLI binary..."
+      - echo "PAT..."
       - echo $SECRET_PAT | base64
       - ./eks-a-releaser-cli prod-bundle
